<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".halaman_verify"
    android:orientation="vertical"
    android:background="@color/light_blue">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:text="Almost There"
            android:textAlignment="center"
            android:paddingTop="200dp"
            android:textSize="35dp"
            android:textColor="@color/white">
        </TextView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc1"
            android:textAlignment="center"
            android:textColor="@color/white">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc2"
            android:textAlignment="center"
            android:textColor="@color/white">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc3"
            android:textAlignment="center"
            android:textColor="@color/white">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="100dp"
        android:paddingHorizontal="20dp">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_button_dpn"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:text="@string/verify"
            android:clickable="true"
            android:onClick="pindah3">

        </androidx.appcompat.widget.AppCompatButton>

    </LinearLayout>




</LinearLayout>